// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeSearchResults /> basic rendering should render empty table data 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    {
      "height": null,
    }
  }
>
  <div
    style={
      {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
      data-testid="code-search-results"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              className="pgn__icon mr-2"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            Close search results
          </button>
        </div>
      </div>
      <div
        className="fade alert-content alert alert-warning show"
        role="alert"
      >
        <span
          className="pgn__icon alert-icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            There are no results.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render error 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    {
      "height": null,
    }
  }
>
  <div
    style={
      {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
      data-testid="code-search-results"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              className="pgn__icon mr-2"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            Close search results
          </button>
        </div>
      </div>
      <div
        className="fade alert-content alert alert-danger show"
        role="alert"
      >
        <span
          className="pgn__icon alert-icon"
        >
          <svg
            aria-hidden={true}
            fill="none"
            focusable={false}
            height={24}
            role="img"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
              fill="currentColor"
            />
          </svg>
        </span>
        <div
          className="pgn__alert-message-wrapper"
        >
          <div
            className="alert-message-content"
          >
            <div
              className="alert-heading h4"
            >
              Unable to load data
            </div>
            <p>
              Try refreshing your screen 
              Network Error
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render loading 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    {
      "height": null,
    }
  }
>
  <div
    style={
      {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
      data-testid="code-search-results"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              className="pgn__icon mr-2"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            Close search results
          </button>
        </div>
      </div>
      <div>
        <div
          className="sr-only"
        >
          Loading...
        </div>
        <span
          aria-busy={true}
          aria-live="polite"
        >
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
          <span
            className="react-loading-skeleton"
            style={
              {
                "height": 25,
              }
            }
          >
            ‌
          </span>
          <br />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render nothing visible when isOpen prop is false 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    {
      "height": null,
    }
  }
/>
`;

exports[`<CodeSearchResults /> basic rendering should render table data 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    {
      "height": null,
    }
  }
>
  <div
    style={
      {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
      data-testid="code-search-results"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              test@test.com
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              className="pgn__icon mr-2"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            Close search results
          </button>
        </div>
      </div>
      <div
        className="code-search-results-table"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="pgn__data-table-layout-wrapper"
            >
              <div
                className="pgn__data-table-layout-main"
              >
                <div
                  className="pgn__data-table-wrapper"
                >
                  <div
                    className="pgn__data-table-container"
                    data-testid="data-table-container"
                  >
                    <table
                      className="pgn__data-table is-striped"
                      role="table"
                    >
                      <thead>
                        <tr
                          role="row"
                        >
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Coupon Batch
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Code
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Redeemed
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Redemption Date
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Course Title
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Actions
                              </span>
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          className="pgn__data-table-row"
                          role="row"
                        >
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Coupon Name
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Y7XS3OGG7WB7KQ5R
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            <span
                              className="pgn__icon text-primary"
                            >
                              <svg
                                aria-hidden={true}
                                fill="none"
                                focusable={false}
                                height={24}
                                role="img"
                                viewBox="0 0 24 24"
                                width={24}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2Z"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                className="sr-only"
                              >
                                has been redeemed
                              </span>
                            </span>
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            August 28, 2019
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Course Title
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                        </tr>
                        <tr
                          className="pgn__data-table-row"
                          role="row"
                        >
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Coupon Name 2
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            CMX9N1LPGTUSL7DU
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                        </tr>
                        <tr
                          className="pgn__data-table-row"
                          role="row"
                        >
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Coupon Name
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Y7XS3OGG7WB7KQ5R
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            <span
                              className="pgn__icon text-primary"
                            >
                              <svg
                                aria-hidden={true}
                                fill="none"
                                focusable={false}
                                height={24}
                                role="img"
                                viewBox="0 0 24 24"
                                width={24}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2Z"
                                  fill="currentColor"
                                />
                              </svg>
                              <span
                                className="sr-only"
                              >
                                has been redeemed
                              </span>
                            </span>
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            August 30, 2019
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Course Title
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                        </tr>
                        <tr
                          className="pgn__data-table-row"
                          role="row"
                        >
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Coupon Name
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            FAG2LVLNHAKIXQ0Q
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div
                    className="pgn__data-table-footer"
                    data-testid="table-footer"
                  >
                    <div
                      data-testid="row-status"
                    >
                      Showing 1 - 4 of 0.
                    </div>
                    <nav
                      aria-label="table pagination"
                      className="pagination-minimal"
                    >
                      <div
                        aria-atomic={true}
                        aria-live="polite"
                        aria-relevant="text"
                        className="sr-only"
                      >
                        Page 1, Current Page, of 1
                      </div>
                      <ul
                        className="pagination"
                      >
                        <li
                          className="page-item disabled"
                        >
                          <button
                            aria-label="Previous"
                            className="btn-icon btn-icon-primary btn-icon-md previous page-link"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <span
                              className="btn-icon__icon-container"
                            >
                              <span
                                className="pgn__icon btn-icon__icon"
                              >
                                <svg
                                  aria-hidden={true}
                                  fill="none"
                                  focusable={false}
                                  height={24}
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M17.51 3.87 15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </li>
                        <li
                          className="page-item disabled"
                        >
                          <button
                            aria-label="Next"
                            className="btn-icon btn-icon-primary btn-icon-md previous page-link"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <span
                              className="btn-icon__icon-container"
                            >
                              <span
                                className="pgn__icon btn-icon__icon"
                              >
                                <svg
                                  aria-hidden={true}
                                  fill="none"
                                  focusable={false}
                                  height={24}
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m6.49 20.13 1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </li>
                      </ul>
                    </nav>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CodeSearchResults /> basic rendering should render table data when searchQuery is a code 1`] = `
<div
  className="pgn-transition-replace-group position-relative"
  style={
    {
      "height": null,
    }
  }
>
  <div
    style={
      {
        "padding": ".1px 0",
      }
    }
  >
    <div
      className="code-search-results border-bottom pb-4"
      data-testid="code-search-results"
    >
      <div
        className="d-flex align-items-center justify-content-between mb-3"
      >
        <div
          className="flex-grow-1 text-truncate mr-3"
        >
          <h3
            className="lead m-0 text-truncate"
          >
            Search results for 
            <em>
              "
              FAG2LVLNHAKIXQ0Q
              "
            </em>
          </h3>
        </div>
        <div
          className="flex-grow-0 flex-shrink-0"
        >
          <button
            className="close-search-results-btn btn btn-outline-primary"
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <span
              className="pgn__icon mr-2"
            >
              <svg
                aria-hidden={true}
                fill="none"
                focusable={false}
                height={24}
                role="img"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            Close search results
          </button>
        </div>
      </div>
      <div
        className="code-search-results-table"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <div
              className="pgn__data-table-layout-wrapper"
            >
              <div
                className="pgn__data-table-layout-main"
              >
                <div
                  className="pgn__data-table-wrapper"
                >
                  <div
                    className="pgn__data-table-container"
                    data-testid="data-table-container"
                  >
                    <table
                      className="pgn__data-table is-striped"
                      role="table"
                    >
                      <thead>
                        <tr
                          role="row"
                        >
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Coupon Batch
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Code
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Redeemed
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Redemption Date
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Assigned To
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Course Title
                              </span>
                            </span>
                          </th>
                          <th
                            colSpan={1}
                            role="columnheader"
                          >
                            <span
                              className="d-flex align-items-center"
                            >
                              <span>
                                Actions
                              </span>
                            </span>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        role="rowgroup"
                      >
                        <tr
                          className="pgn__data-table-row"
                          role="row"
                        >
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            Test Coupon Name
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            FAG2LVLNHAKIXQ0Q
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            test@test.com
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            -
                          </td>
                          <td
                            className="pgn__data-table-cell-wrap"
                            role="cell"
                          >
                            <button
                              className="remind-btn btn-sm p-0 btn btn-link"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              Remind
                            </button>
                             | 
                            <button
                              className="revoke-btn btn-sm p-0 btn btn-link"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              Revoke
                            </button>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                  <div
                    className="pgn__data-table-footer"
                    data-testid="table-footer"
                  >
                    <div
                      data-testid="row-status"
                    >
                      Showing 1 - 1 of 0.
                    </div>
                    <nav
                      aria-label="table pagination"
                      className="pagination-minimal"
                    >
                      <div
                        aria-atomic={true}
                        aria-live="polite"
                        aria-relevant="text"
                        className="sr-only"
                      >
                        Page 1, Current Page, of 1
                      </div>
                      <ul
                        className="pagination"
                      >
                        <li
                          className="page-item disabled"
                        >
                          <button
                            aria-label="Previous"
                            className="btn-icon btn-icon-primary btn-icon-md previous page-link"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <span
                              className="btn-icon__icon-container"
                            >
                              <span
                                className="pgn__icon btn-icon__icon"
                              >
                                <svg
                                  aria-hidden={true}
                                  fill="none"
                                  focusable={false}
                                  height={24}
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M17.51 3.87 15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </li>
                        <li
                          className="page-item disabled"
                        >
                          <button
                            aria-label="Next"
                            className="btn-icon btn-icon-primary btn-icon-md previous page-link"
                            disabled={true}
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <span
                              className="btn-icon__icon-container"
                            >
                              <span
                                className="pgn__icon btn-icon__icon"
                              >
                                <svg
                                  aria-hidden={true}
                                  fill="none"
                                  focusable={false}
                                  height={24}
                                  role="img"
                                  viewBox="0 0 24 24"
                                  width={24}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="m6.49 20.13 1.77 1.77 9.9-9.9-9.9-9.9-1.77 1.77L14.62 12l-8.13 8.13Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </li>
                      </ul>
                    </nav>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
